--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <p class="text-ink/70 mb-6 leading-relaxed" data-i18n="ember-desc">
                             A space for slowing down and speaking out. In the cracks of time, write light bottles, ignite embers, and form gentle connections with strangers.
                         </p>
-                        <a href="#" class="btn-soft inline-block bg-soft-peach/80 text-ink px-5 py-2.5 rounded-full text-sm font-medium" data-i18n="ember-cta">
+                        <a href="https://discord.com/oauth2/authorize?client_id=1456176460690882676&permissions=2147567680&integration_type=0&scope=bot+applications.commands" target="_blank" rel="noopener noreferrer" class="btn-soft inline-block bg-soft-peach/80 text-ink px-5 py-2.5 rounded-full text-sm font-medium" data-i18n="ember-cta">
                             Enter EmberLight ✦
                         </a>
                     </div>
