--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <article class="card-hover bg-white/60 backdrop-blur-sm rounded-3xl overflow-hidden shadow-sm border border-white/50" data-aos="fade-up" data-aos-delay="250">
                     <div class="w-full h-48 bg-gradient-to-br from-soft-mint to-soft-blue flex items-center justify-center overflow-hidden">
                         <img 
-                            src="images/catlife.png" 
+                            src="images/CatLife.png" 
                             alt="CatLife" 
                             class="w-full h-full object-cover"
                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
