Add CatLife Discord bot link with Beta label

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                         <p class="text-ink/70 mb-6 leading-relaxed" data-i18n="cat-desc">
                             A healing digital cat companion. Let a fluffy little friend accompany you through each day.
                         </p>
-                        <a href="#" class="btn-soft inline-block bg-soft-mint/80 text-ink px-5 py-2.5 rounded-full text-sm font-medium opacity-70 cursor-not-allowed" data-i18n="cat-cta" title="Coming soon!">
-                            Adopt a Cat 🐱
+                        <a href="https://discord.com/oauth2/authorize?client_id=1466612464568238166&permissions=2147567680&integration_type=0&scope=bot+applications.commands" target="_blank" rel="noopener noreferrer" class="btn-soft inline-block bg-soft-mint/80 text-ink px-5 py-2.5 rounded-full text-sm font-medium" data-i18n="cat-cta">
+                            Adopt a Cat 🐱 <span class="text-xs opacity-70">Beta</span>
                         </a>
                     </div>
                 </article>
@@ -305,7 +305,7 @@
                 'ember-cta': 'Enter EmberLight ✦',
                 'cat-subtitle': '貓語日記',
                 'cat-desc': 'A healing digital cat companion. Let a fluffy little friend accompany you through each day.',
-                'cat-cta': 'Adopt a Cat 🐱',
+                'cat-cta': 'Adopt a Cat 🐱 <span class="text-xs opacity-70">Beta</span>',
                 'support-title': '✦ Support Mokupo ✦',
                 'support-desc': 'If you enjoy my creations,<br>you can water Mokupo with a drop ☺️'
             },
@@ -321,7 +321,7 @@
                 'ember-cta': '進入微光世界 ✦',
                 'cat-subtitle': 'CatLife',
                 'cat-desc': '療癒系的數位貓咪。讓一隻毛茸茸的小傢伙陪伴你度過每一天。',
-                'cat-cta': '領養一隻貓 🐱',
+                'cat-cta': '領養一隻貓 🐱 <span class="text-xs opacity-70">Beta</span>',
                 'support-title': '✦ 支持 Mokupo ✦',
                 'support-desc': '如果你喜歡我的作品，<br>可以為 Mokupo 灌溉一滴水 ☺️'
             }
